--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "gradient-string": "^1.2.0",
     "path": "^0.12.7"
   },
   "repository": {
