--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "gradient-string": "^1.2.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "uuid": "^8.2.0"
   },
   "repository": {
     "type": "git",
