--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "gradient-string": "^1.2.0",
     "path": "^0.12.7",
-    "uuid": "^8.2.0"
+    "util": "^0.12.3",
+    "uuid": "^3.4.0"
   },
   "repository": {
     "type": "git",
